--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   country_picker: ^2.0.27
+  firebase_core: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
