--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   country_picker: ^2.0.27
   firebase_core: ^2.0.0
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.17.5
+  provider: ^6.1.5
 
 
 dev_dependencies:
