--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   country_picker: ^2.0.27
-  firebase_core: ^2.0.0
-  firebase_auth: ^4.16.0
-  cloud_firestore: ^4.17.5
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  cloud_firestore: ^4.17.4
   provider: ^6.1.5
   google_maps_flutter: ^2.12.3
+  flutter_sound: ^9.2.13
+  permission_handler: ^11.3.1
+  path_provider: ^2.0.11
+  audioplayers: ^5.1.0
+  uuid: ^3.0.7
+  firebase_storage: ^11.6.5
 
 
 dev_dependencies:
