--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   audioplayers: ^5.1.0
   uuid: ^3.0.7
   firebase_storage: ^11.6.5
+  flutter_contacts: ^1.1.7+1
+  image_picker: ^1.1.2
+  file_picker: ^8.0.6
 
 
 dev_dependencies:
