--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   flutter_contacts: ^1.1.7+1
   image_picker: ^1.1.2
   file_picker: ^8.0.6
+  geolocator: ^12.0.0
+  url_launcher: ^6.3.0
 
 
 dev_dependencies:
