وضع الخطوط بنجاح

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
   assets:
     - assets/
     - assets/images/onboarding/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -109,3 +110,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/Cairo-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Cairo-Bold.ttf
+          weight: 700
