ارسال مقاطع صوتية بشكل صحيح

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   file_picker: ^10.2.0
   geolocator: ^14.0.0
   url_launcher: ^6.3.0
+  firebase_app_check: ^0.3.0+1
 
 
 dev_dependencies:
