--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   provider: ^6.1.5
   google_maps_flutter: ^2.12.3
   flutter_sound: ^9.2.13
-  permission_handler: ^12.0.1
+  permission_handler: 11.4.0
   path_provider: ^2.0.11
   audioplayers: ^6.5.0
   uuid: ^4.5.1
@@ -55,6 +55,7 @@ dependencies:
   geolocator: ^14.0.0
   url_launcher: ^6.3.0
   firebase_app_check: ^0.3.0+1
+  zego_uikit_prebuilt_call: ^4.14.5
 
 
 dev_dependencies:
