--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app requires access to the microphone to send voice messages.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>نحتاج إلى الوصول لجهات الاتصال لإضافة جهات اتصال الطوارئ</string>
 </dict>
 </plist>
