--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   uuid: ^4.5.1
   firebase_storage: ^12.4.9
   flutter_contacts: ^1.1.7+1
+  shared_preferences: ^2.2.2
   image_picker: ^1.1.2
   file_picker: ^10.2.0
   geolocator: ^14.0.0
