--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,34 +32,34 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.2
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   country_picker: ^2.0.27
-  firebase_core: ^3.15.1
-  firebase_auth: ^5.6.2
-  cloud_firestore: ^5.6.11
-  provider: ^6.1.5
-  google_maps_flutter: ^2.12.3
-  flutter_sound: ^9.2.13
-  permission_handler: 11.4.0
-  path_provider: ^2.0.11
-  audioplayers: ^6.5.0
-  uuid: ^4.5.1
-  firebase_storage: ^12.4.9
-  flutter_contacts: ^1.1.7+1
-  shared_preferences: ^2.2.2
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.1
+  cloud_firestore: ^5.1.0
+  provider: ^6.1.2
+  google_maps_flutter: ^2.7.0
+  flutter_sound: ^9.3.1
+  permission_handler: ^12.0.1
+  path_provider: ^2.1.3
+  audioplayers: ^6.0.0
+  uuid: ^4.4.0
+  firebase_storage: ^12.1.0
+  flutter_contacts: ^1.1.9+2
+  shared_preferences: ^2.2.3
   image_picker: ^1.1.2
-  file_picker: ^10.2.0
-  geolocator: ^14.0.0
+  file_picker: ^8.0.6
+  geolocator: ^12.0.1
   url_launcher: ^6.3.0
   firebase_app_check: ^0.3.0+1
-  zego_uikit_prebuilt_call: ^4.14.5
-  image: ^4.5.4
-  flutter_image_compress: ^2.3.0
-  mime: ^2.0.0
+  zego_uikit_prebuilt_call: ^4.17.6
+  image: ^4.2.0
+  flutter_image_compress: ^2.4.0
+  mime: ^1.0.5
 
 
 dev_dependencies:
@@ -71,7 +71,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
